src/test/resources/etapa4/passing/correctTypeAssign.ru
/? chequea que se asigne a una variable el resultado de una funcion que retorne el tipo correcto.

struct A{
    Int i;
    Bool h;
    B beto;
}

impl A {
    .(){}

    fn met2() -> Int {
        i = beto.met1(5); /? la variable i es de tipo Int y la funcion met1 retorna un Int
    }
}

struct B {
    Str x,z;
    A a;
}

impl B {
    .(){}
    fn met1(Int a) -> Int {
    }
}


start {}